<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/button_rounded_border_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/label_create_user"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/label_first_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layout_only_rounded_border_line"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/label_hint_first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/label_last_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layout_only_rounded_border_line"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/label_hint_last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/label_email"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layout_only_rounded_border_line"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/label_hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:padding="12dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/label_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layout_only_rounded_border_line"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/label_hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:padding="12dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/label_location"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layout_only_rounded_border_line"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/label_hint_location"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/label_designation"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_designation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layout_only_rounded_border_line"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/label_hint_designation"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/label_role"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/et_role"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/layout_only_rounded_border_line"
                    android:clickable="true"
                    android:drawablePadding="12dp"
                    android:drawableRight="@drawable/dropdown"
                    android:focusable="false"
                    android:fontFamily="@font/opensans_semibold"
                    android:hint="@string/label_hint_role"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="12dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorGray"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btn_add"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/layout_rounded_border_teal"
                    android:fontFamily="@font/opensans_regular"
                    android:text="@string/label_add"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/label_cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTeal"
                    android:textSize="14sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
